Extent report version 4 implemented

--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,12 @@
         <version>8.0.17</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+    <dependency>
+        <groupId>com.aventstack</groupId>
+        <artifactId>extentreports</artifactId>
+        <version>4.0.9</version>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
     <dependency>
