updates in util, not able to implement Extension in chrome due to some issue

--- a/src/main/java/propertiesfiles/Config.properties
+++ b/src/main/java/propertiesfiles/Config.properties
@@ -1,4 +1,4 @@
-browser=chrome
+browser=firefox
 testUrl=http://www.way2automation.com/angularjs-protractor/banking/#/login
 implicitWait=30
 pageLoadTime=60
