Changes done to Update framework

--- a/src/main/java/propertiesfiles/Config.properties
+++ b/src/main/java/propertiesfiles/Config.properties
@@ -1,4 +1,4 @@
-browser=firefox
+browser=chrome
 testUrl=http://www.way2automation.com/angularjs-protractor/banking/#/login
 implicitWait=30
 pageLoadTime=60
